@@ -1,4 +1,4 @@
 // PR c++/59110
 // { dg-options "-std=c++1y" }
 
-int i = *(auto*)0; // { dg-error "cannot convert" }
+int i = *(auto*)0; // { dg-error "" }
